# Messenger

client/: CMakeLists.txt
client/headers/: client.hpp
client/src/: client.cpp  main.cpp
server/: CMakeLists.txt  database.db
server/headers/: helper.hpp  server.hpp  user.hpp  userDB.hpp  user_server.hpp
server/src/: helper.cpp  main.cpp  server.cpp  user.cpp  userDB.cpp  user_server.cpp
